[package]
name = "stoqed"
version = "0.1.0"
authors = ["Justin P <melotic@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap="3.0.0-beta.2"
log="0.4"
pretty_env_logger = "0.4"
chrono="0.4"
reqwest= { version = "0.11", features= ["blocking"]}
notify-rust = "4"

[profile.dev]
incremental=true

[profile.release]
opt-level="z"
lto=true